--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
-  datasource:
-    generate-unique-name: false
-    name: pizza-cloud
+  data:
+    cassandra:
+      keyspace-name: pizza_cloud
+      schema-action: recreate
+      local-datacenter: datacenter1
+
