--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <name>Pizza Cloud Parent Project</name>
     <modules>
         <module>pizzacloud</module>
+        <module>auth-server</module>
+        <module>pizza-cloud-admin</module>
     </modules>
 
 </project>
