--- a/pizzacloud/messaging-kafka/pom.xml
+++ b/pizzacloud/messaging-kafka/pom.xml
@@ -12,12 +12,8 @@
     <parent>
         <groupId>sia</groupId>
         <artifactId>pizza-cloud-parent</artifactId>
-        <version>0.0.10-SNAPSHOT</version>
+        <version>0.0.12-SNAPSHOT</version>
     </parent>
-
-    <properties>
-        <java.version>17</java.version>
-    </properties>
 
     <dependencies>
 
@@ -29,7 +25,7 @@
 
         <dependency>
             <groupId>sia</groupId>
-            <artifactId>messaging-common</artifactId>
+            <artifactId>messaging-noop</artifactId>
             <version>${pizzacloud.version}</version>
         </dependency>
 
