Part 12 - Reactive Reactive Cassandra Ver

--- a/pizzacloud/app/src/main/resources/application.yml
+++ b/pizzacloud/app/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
   data:
     rest:
       base-path: /data-api
+    cassandra:
+      keyspace-name: pizzacloud
+      schema-action: recreate
+      local-datacenter: datacenter1
+
 
 security:
     user:
