--- a/pizzacloud/app/pom.xml
+++ b/pizzacloud/app/pom.xml
@@ -15,6 +15,10 @@
         <artifactId>pizza-cloud-parent</artifactId>
         <version>0.0.15-SNAPSHOT</version>
     </parent>
+         
+   <properties>
+    <spring-boot-admin.version>2.4.3</spring-boot-admin.version>
+   </properties>
 
     <dependencies>
 
