--- a/pizzacloud/jmx/pom.xml
+++ b/pizzacloud/jmx/pom.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
           http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>messaging-noop</artifactId>
+    <artifactId>jmx</artifactId>
     <packaging>jar</packaging>
 
-    <name>messaging-noop</name>
-    <description>Pizza Cloud Messaging (NOOP)</description>
+    <name>jmx</name>
+    <description>Pizza Cloud JMX</description>
 
     <parent>
         <groupId>sia</groupId>
@@ -20,14 +21,14 @@
 
         <dependency>
             <groupId>sia</groupId>
-            <artifactId>domain</artifactId>
+            <artifactId>data</artifactId>
             <version>${pizzacloud.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
+            <groupId>sia</groupId>
+            <artifactId>domain</artifactId>
+            <version>${pizzacloud.version}</version>
         </dependency>
 
     </dependencies>
