--- a/pizzacloud/security/pom.xml
+++ b/pizzacloud/security/pom.xml
@@ -11,9 +11,9 @@
     <description>Pizza Cloud Security</description>
 
     <parent>
-        <groupId>sia</groupId>
         <artifactId>pizza-cloud-parent</artifactId>
-        <version>0.0.15-SNAPSHOT</version>
+        <groupId>sia</groupId>
+        <version>0.0.17-SNAPSHOT</version>
     </parent>
 
     <dependencies>
@@ -21,13 +21,13 @@
         <dependency>
             <groupId>sia</groupId>
             <artifactId>data</artifactId>
-            <version>0.0.12-SNAPSHOT</version>
+            <version>${pizzacloud.version}</version>
         </dependency>
 
         <dependency>
             <groupId>sia</groupId>
             <artifactId>domain</artifactId>
-            <version>0.0.12-SNAPSHOT</version>
+            <version>${pizzacloud.version}</version>
         </dependency>
 
         <dependency>
@@ -55,7 +55,5 @@
     </dependencies>
 
 </project>
-
-
 
 
