--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>sia</groupId>
-    <artifactId>pizza-cloud-parent</artifactId>
+    <artifactId>pizzacloud-main</artifactId>
     <packaging>pom</packaging>
     <version>6.0</version>
     <name>Pizza Cloud Parent Project</name>
